--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -60,6 +60,7 @@
         app:siSquare="true"/>
     <com.example.administrator.xiaominote.view.richedittext.RichTextEditor
         android:id="@+id/richet"
+        android:background="@color/main_bg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
