--- a/app/src/main/res/layout/edit_item1.xml
+++ b/app/src/main/res/layout/edit_item1.xml
@@ -1,27 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-   >
-    <android.support.v7.widget.AppCompatRadioButton
-        android:layout_alignParentLeft="true"
-        android:id="@+id/radio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <com.example.administrator.xiaominote.view.richedittext.DeletableEditText
-        android:id="@+id/del_et"
+    >
+    <RelativeLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:cursorVisible="true"
-        android:lineSpacingExtra="10dp"
-        android:textColor="#444"
-        android:textCursorDrawable="@drawable/cursor_shape"
-
         >
+        <com.example.administrator.xiaominote.view.checkbox.SmoothCheckBox
+            android:layout_alignParentLeft="true"
+            android:id="@+id/smoothcheckbox"
+            android:layout_alignParentTop="true"
+            android:layout_width="20dp"
+            android:layout_height="20dp"/>
+        <com.example.administrator.xiaominote.view.richedittext.DeletableEditText
+            android:id="@+id/del_et"
+            android:layout_toRightOf="@id/smoothcheckbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@null"
 
-    </com.example.administrator.xiaominote.view.richedittext.DeletableEditText>
+            android:cursorVisible="true"
 
-</RelativeLayout>
+            android:textColor="#444"
+            android:textCursorDrawable="@drawable/cursor_shape"
+
+            >
+
+        </com.example.administrator.xiaominote.view.richedittext.DeletableEditText>
+
+    </RelativeLayout>
+
+</FrameLayout>
