--- a/app/src/main/res/layout/edit_item1.xml
+++ b/app/src/main/res/layout/edit_item1.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
-
+            android:textSize="15dp"
             android:cursorVisible="true"
 
             android:textColor="#444"
